--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
     "expo-cli": "^6.3.8",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-elements": "^3.4.3",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "tailwind-react-native-classnames": "^1.5.1"
   },
