--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ web-build/
 .DS_Store
 
 .env
+.yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
