--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.7.1",
     "react-native-maps-directions": "^1.9.0",
